// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render borderBottom 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,8 @@
  <div>
    <div
-     class="components-surface css-pt58n0-View-Surface-getBorders-primary e19lxcc00"
+     class="components-surface css-soe81k-View-Surface-getBorders-primary e19lxcc00"
      data-wp-c16t="true"
      data-wp-component="Surface"
    >
      Surface
    </div>
`;

exports[`props should render borderLeft 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,8 @@
  <div>
    <div
-     class="components-surface css-1vckp4o-View-Surface-getBorders-primary e19lxcc00"
+     class="components-surface css-soe81k-View-Surface-getBorders-primary e19lxcc00"
      data-wp-c16t="true"
      data-wp-component="Surface"
    >
      Surface
    </div>
`;

exports[`props should render borderRight 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,8 @@
  <div>
    <div
-     class="components-surface css-sw9dzi-View-Surface-getBorders-primary e19lxcc00"
+     class="components-surface css-soe81k-View-Surface-getBorders-primary e19lxcc00"
      data-wp-c16t="true"
      data-wp-component="Surface"
    >
      Surface
    </div>
`;

exports[`props should render borderTop 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,8 @@
  <div>
    <div
-     class="components-surface css-123k66h-View-Surface-getBorders-primary e19lxcc00"
+     class="components-surface css-soe81k-View-Surface-getBorders-primary e19lxcc00"
      data-wp-c16t="true"
      data-wp-component="Surface"
    >
      Surface
    </div>
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
}

<div>
  <div
    class="components-surface emotion-0 emotion-1"
    data-wp-c16t="true"
    data-wp-component="Surface"
  >
    Surface
  </div>
</div>
`;

exports[`props should render variants 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,8 @@
  <div>
    <div
-     class="components-surface css-1m2pafr-View-Surface-getBorders-secondary e19lxcc00"
+     class="components-surface css-soe81k-View-Surface-getBorders-primary e19lxcc00"
      data-wp-c16t="true"
      data-wp-component="Surface"
    >
      Surface
    </div>
`;
